--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libcrio"
-version = "0.1.5"
+version = "0.2.0"
 edition = "2021"
 authors = ["Anton Whalley <anton@venshare.com>"]
 description = "A wrapper around the crictl cli to return serde_json objects"
@@ -11,6 +11,7 @@ exclude = ["/.github/**"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = "1.0.64"
+serde_json = "1.0.76"
 log = "0.4.14"
+serde = { version = "1.0.134", features = ["derive"] }
 
